tests/success/comptime/array_tuple_deconstruction.bz
function test()
{
	(consteval {
		let [..._] = [10: int32]();
	});
}
