tests/error/comptime/invalid_result_value3.bz
consteval s = {
	let buffer: [10: uint8];
	let result: [5: str];
	result[3] = __builtin_str_from_ptrs(buffer.begin(), buffer.end());
	result
};
